--- a/price_sites.yaml
+++ b/price_sites.yaml
@@ -1,43 +1,4 @@
 sites:
-  - name: "Marshallberg Farm (NC farm, direct)"
-    start_urls: ["https://thecaviarfarm.com/fresh-caviar/","https://thecaviarfarm.com/order-caviar-online-marshallberg-farm/"]
-    allow_domains: ["thecaviarfarm.com"]
-    type: retail
-    notes: "Ships overnight in the U.S."
-
-  - name: "Browne Trading Company"
-    start_urls: ["https://brownetrading.com/collections/buy-caviar-online"]
-    allow_domains: ["brownetrading.com"]
-    type: retail
-
-  - name: "Imperia Caviar"
-    start_urls: ["https://imperiacaviar.com/collections/all"]
-    allow_domains: ["imperiacaviar.com"]
-    type: retail
-
-  - name: "Pearl Street Caviar"
-    start_urls: ["https://pearlstreetcaviar.com/collections"]
-    allow_domains: ["pearlstreetcaviar.com"]
-    type: retail
-
-  - name: "Black River Caviar"
-    start_urls: ["https://www.blackrivercaviar.com/shop/"]
-    allow_domains: ["blackrivercaviar.com"]
-    type: retail
-
-  - name: "Calvisius USA"
-    start_urls: ["https://calvisiususa.com/collections/caviar"]
-    allow_domains: ["calvisiususa.com"]
-    type: retail
-
-  - name: "Gourmet Wholesaler (wholesale)"
-    start_urls: ["https://www.gourmetwholesaler.com/caviar-and-seafood/"]
-    allow_domains: ["gourmetwholesaler.com"]
-    type: wholesale
-
-  # You can add: Petrossian, Marky’s, The Caviar Co., Caviar Russe, Kolikof, D’Artagnan, Browne Wholesale, etc.
-
-  sites:
   - name: "Marshallberg Farm"
     start_urls:
       - "https://thecaviarfarm.com/fresh-caviar/"
@@ -50,19 +11,6 @@ sites:
       - "https://brownetrading.com/collections/buy-caviar-online"
     allow_domains: ["brownetrading.com"]
     type: retail
-
-  - name: "Caviar Russe (Retail/Trade)"
-    start_urls:
-      - "https://caviarrusse.com/pages/caviar"
-      - "https://caviarrusse.com/pages/trade"
-    allow_domains: ["caviarrusse.com"]
-    type: wholesale
-
-  - name: "Gourmet Wholesaler"
-    start_urls:
-      - "https://www.gourmetwholesaler.com/caviar-and-seafood/"
-    allow_domains: ["gourmetwholesaler.com"]
-    type: wholesale
 
   - name: "Imperia Caviar"
     start_urls:
@@ -83,8 +31,26 @@ sites:
     allow_domains: ["gourmetfoodstore.com"]
     type: retail
 
-  - name: "Marky’s Caviar / Marky’s Gourmet"
+  - name: "Marky’s"
     start_urls:
       - "https://markys.com/?s=caviar"
     allow_domains: ["markys.com"]
     type: retail
+
+  - name: "Black River Caviar"
+    start_urls:
+      - "https://www.blackrivercaviar.com/shop/"
+    allow_domains: ["blackrivercaviar.com"]
+    type: retail
+
+  - name: "Calvisius USA"
+    start_urls:
+      - "https://calvisiususa.com/collections/caviar"
+    allow_domains: ["calvisiususa.com"]
+    type: retail
+
+  - name: "Gourmet Wholesaler"
+    start_urls:
+      - "https://www.gourmetwholesaler.com/caviar-and-seafood/"
+    allow_domains: ["gourmetwholesaler.com"]
+    type: wholesale
