--- a/price_sites.yaml
+++ b/price_sites.yaml
@@ -1,10 +1,16 @@
+# List of caviar sellers (US-focused). Each entry should point to a page that lists
+# actual product pages (not carts, not wholesale forms). The scraper will follow
+# product links like /product/ or /products/ and then extract size/price.
+
 sites:
   - name: "Browne Trading"
     start_urls:
       - "https://brownetrading.com/product-category/caviar/"
     allow_domains: ["brownetrading.com","www.brownetrading.com"]
     selectors:
-      product_link: "a.woocommerce-LoopProduct-link[href*='/product/']"
+      # Grid links that lead to single product pages
+      product_link: "ul.products li.product a.woocommerce-LoopProduct-link[href*='/product/']"
+      # Product page selectors (fallbacks; JSON-LD & WooCommerce variations are preferred)
       name: "h1.product_title, h1.entry-title, h1"
       price: "p.price, .summary [itemprop='price'], meta[property='og:price:amount']::attr(content)"
 
@@ -13,7 +19,8 @@ sites:
       - "https://www.markys.com/caviar"
     allow_domains: ["markys.com","www.markys.com"]
     selectors:
-      product_link: "a[href*='/product/'], a[href*='/products/']"
+      # Magento-like product cards
+      product_link: "a.product-item-link[href*='/product/'], a[href*='/products/']"
       name: "h1"
       price: "[itemprop='price'], meta[property='og:price:amount']::attr(content), .price"
 
@@ -28,18 +35,35 @@ sites:
 
   - name: "The Caviar Co."
     start_urls:
-      - "https://thecaviarco.com/pages/wholesale"
+      - "https://thecaviarco.com/collections/caviar"
     allow_domains: ["thecaviarco.com","www.thecaviarco.com"]
     selectors:
       product_link: "a[href*='/products/']"
       name: "h1"
       price: ".price, .price__regular, [itemprop='price'], meta[property='og:price:amount']::attr(content)"
 
-  - name: "Seattle Caviar"
+  - name: "Tsar Nicoulai"
     start_urls:
-      - "https://www.seattlecaviar.com/collections/caviar"
-    allow_domains: ["seattlecaviar.com","www.seattlecaviar.com"]
+      - "https://www.tsarnicoulai.com/collections/caviar"
+    allow_domains: ["tsarnicoulai.com","www.tsarnicoulai.com"]
     selectors:
       product_link: "a[href*='/products/']"
       name: "h1"
       price: ".price, [itemprop='price'], meta[property='og:price:amount']::attr(content)"
+
+  - name: "Petrossian USA"
+    start_urls:
+      - "https://www.petrossian.com/collections/caviar"
+    allow_domains: ["petrossian.com","www.petrossian.com"]
+    selectors:
+      product_link: "a[href*='/products/']"
+      name: "h1"
+      price: ".price, [itemprop='price'], meta[property='og:price:amount']::attr(content)"
+
+# Tip:
+# - If a site shows variants (30g / 50g / 1 oz) on the same page, our main.py will
+#   read WooCommerce/Magento variations and emit separate rows per size with the
+#   correct price. The 'price' selector above is just a fallback.
+#
+# Optional safety net (set in Render → Environment):
+# SEED_PRODUCT_URLS = https://brownetrading.com/product/osetra-caviar-30g, https://www.markys.com/product/kaluga-caviar-1oz
