--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-requests>=2.28
-python-dotenv>=1.0
-sendgrid>=6.9.1
-jinja2>=3.1
-beautifulsoup4>=4.12
-lxml>=4.9
-PyYAML>=6.0
+requests
+beautifulsoup4
+lxml
+PyYAML
+Jinja2
+python-dotenv
